force-app/main/default/objects/nFORCE__Layout__c/nFORCE__Layout__c.object-meta.xml
<CustomObject>
    <label>Layout</label>
    <nameField>
        <label>Layout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Layout</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>