force-app/main/default/objects/nFORCE__Layout__c/fields/nFORCE__Layout_Description__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Layout_Description__c</fullName>
    <description>Use this rich text field to enter a description of the layout. Note additional details (such as number of columns, tiles [yes/no/location/number], progress, nav, content, header, footer, visible/hidden).</description>
    <inlineHelpText>Enter a description of the layout, noting additional details (such as number of columns, tiles [yes/no/location/number], progress, nav, content, header, footer, visible/hidden).</inlineHelpText>
    <label>Layout Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>