force-app/main/default/objects/nFORCE__Layout__c/fields/nFORCE__Layout_Preview_Image__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Layout_Preview_Image__c</fullName>
    <description>Use this text field to enter the URL for the preview image for the page layout.</description>
    <inlineHelpText>Enter the URL for the preview image for the page layout.</inlineHelpText>
    <label>Layout Preview Image</label>
    <length>2083</length>
    <type>LongTextArea</type>
</CustomField>